--- a/org.eclipse.ui/pom.xml
+++ b/org.eclipse.ui/pom.xml
@@ -9,6 +9,11 @@
   </parent>
 
   <artifactId>org.eclipse.ui</artifactId>
+
+  <!-- Further required information for publishing on OSSRH -->
+  <name>Mock for Eclipse UI</name>
+  <description>Leightweight mock code of org.eclipse.ui with parts of their API, but no implementation or platform dependence.</description>
+  <url>https://github.com/kieler/SWT-Mock/</url>
   
   <dependencies>
     <dependency>
