--- a/org.eclipse.swt/pom.xml
+++ b/org.eclipse.swt/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>de.cau.cs.kieler.swt.mock</groupId>
     <artifactId>parent</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
   </parent>
 
   <artifactId>org.eclipse.swt</artifactId>
